syntax = "proto3";

package grpc_tutorial;

option go_package = "pb/";

import "laptop_message.proto";

import "google/protobuf/descriptor.proto";
import "filter_message.proto";
import "image_message.proto";
import "rating_message.proto";

// Define custom option to specify if logging should be enabled for an RPC.
extend google.protobuf.MethodOptions { optional bool log_enabled = 51234; }

message CreateLaptopRequest { Laptop laptop = 1; }

message CreateLaptopResponse { string id = 1; }

message SearchLaptopRequest { Filter filter = 1; }

message SearchLaptopResponse { Laptop laptop = 1; }

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {
    option (log_enabled) = true;
  };
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {
    option (log_enabled) = true;
  };
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {
    option (log_enabled) = true;
  };
  rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {
    option (log_enabled) = true;
  };
}
